# libcurses

./: .flake8  CLAUDE.md  Makefile  Python.mk  README.md  app.py  mkdoc  pyproject.toml
libcurses/: __init__.py  border.py  bw.py  colormap.py  console.py  core.py  getkey.py  getline.py  grid.py  loggersink.py  logsink.py  logwin.py  menu.py  mouse.py  mouseevent.py  resize.py  sink.py  stack.py
sample_app/: app.py
sample_app/feeds/: file.py  letter.py  number.py
sample_app/tests/: test_file.py  test_letter.py  test_number.py
tests/: __init__.py  animalfarm.py  fruitvendor.py  test_app.py  test_app_feed.py  test_border.py  test_bw.py  test_colormap.py  test_core.py  test_getkey.py  test_getline.py  test_grid.py  test_logsink.py  test_logwin.py  test_menu.py  test_mouse.py  test_mouse_class.py  test_mouseevent.py  test_stack.py
tests/feeds/: file.py  letter.py  number.py  test_file.py  test_letter.py  test_number.py
